NetBSD Problem Report #39006

From apb@cequrux.com  Sat Jun 21 15:50:01 2008
Return-Path: <apb@cequrux.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id AB3B663B8AD
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 21 Jun 2008 15:50:01 +0000 (UTC)
Message-Id: <20080621154752.9E3A6E9307C@apb-laptoy.apb.alt.za>
Date: Sat, 21 Jun 2008 15:47:52 +0000 (UTC)
From: apb@cequrux.com
To: gnats-bugs@gnats.NetBSD.org
Subject: bthub at ubt device has no power management support
X-Send-Pr-Version: 3.95

>Number:         39006
>Category:       kern
>Synopsis:       bthub at ubt device has no power management support
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jun 21 15:55:00 +0000 2008
>Closed-Date:    Tue Apr 03 17:49:51 +0000 2012
>Last-Modified:  Tue Apr 03 17:49:51 +0000 2012
>Originator:     Alan Barrett
>Release:        NetBSD 4.99.63
>Organization:
Not much
>Environment:
System: NetBSD 4.99.63
Architecture: i386
Machine: i386
>Description:
	The bthub at ubt device driver has no power management support
>How-To-Repeat:
	Boot a kernel with bthub0 at ubt0.
	# sysctl -w machdep.sleep_state=3
	Devices without power management support: bthub0
>Fix:
	Add power management support, probably in
	src/sys/dev/bluetooth/bthub.c.

>Release-Note:

>Audit-Trail:
From: "Jared D. McNeill" <jmcneill@invisible.ca>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/39006: bthub at ubt device has no power management support
Date: Sat, 21 Jun 2008 17:57:52 -0400

 apb@cequrux.com wrote:
 >> How-To-Repeat:
 > 	Boot a kernel with bthub0 at ubt0.
 > 	# sysctl -w machdep.sleep_state=3
 > 	Devices without power management support: bthub0
 >> Fix:
 > 	Add power management support, probably in
 > 	src/sys/dev/bluetooth/bthub.c.

 Update your sleep_button script, it will detach all bluetooth devices 
 before sleeping, since we can't persist them across suspend anyway.

 Cheers,
 Jared

From: "Iain Hibbert" <plunky@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39006 CVS commit: src/sys/dev/bluetooth
Date: Tue, 3 Apr 2012 09:32:54 +0000

 Module Name:	src
 Committed By:	plunky
 Date:		Tue Apr  3 09:32:54 UTC 2012

 Modified Files:
 	src/sys/dev/bluetooth: bthidev.c bthub.c btkbd.c btmagic.c btms.c
 	    btsco.c

 Log Message:
 register/deregister pmf(9) NULL handlers for bthub(4) and
 bluetooth devices which attach there, to fix PR/39006


 To generate a diff of this commit:
 cvs rdiff -u -r1.21 -r1.22 src/sys/dev/bluetooth/bthidev.c
 cvs rdiff -u -r1.17 -r1.18 src/sys/dev/bluetooth/bthub.c
 cvs rdiff -u -r1.13 -r1.14 src/sys/dev/bluetooth/btkbd.c
 cvs rdiff -u -r1.1 -r1.2 src/sys/dev/bluetooth/btmagic.c
 cvs rdiff -u -r1.9 -r1.10 src/sys/dev/bluetooth/btms.c
 cvs rdiff -u -r1.27 -r1.28 src/sys/dev/bluetooth/btsco.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Iain Hibbert <plunky@rya-online.net>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/39006: bthub at ubt device has no power management
 support
Date: Tue, 3 Apr 2012 10:41:33 +0100 (BST)

 Jared is ultimately correct, the bthub driver and its child devices should
 be detached before the suspend event, but conversely it should not block a
 shutdown, so I have committed a fix for this, by registering the drivers
 with pmf(9) so that doesn't happen

 iain

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39006 CVS commit: [netbsd-6] src/sys/dev/bluetooth
Date: Tue, 3 Apr 2012 17:31:20 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Tue Apr  3 17:31:20 UTC 2012

 Modified Files:
 	src/sys/dev/bluetooth [netbsd-6]: bthidev.c bthub.c btkbd.c btmagic.c
 	    btms.c btsco.c

 Log Message:
 Pull up following revision(s) (requested by plunky in ticket #159):
 	sys/dev/bluetooth/btsco.c: revision 1.28
 	sys/dev/bluetooth/bthidev.c: revision 1.22
 	sys/dev/bluetooth/bthub.c: revision 1.18
 	sys/dev/bluetooth/btkbd.c: revision 1.14
 	sys/dev/bluetooth/btms.c: revision 1.10
 	sys/dev/bluetooth/btmagic.c: revision 1.2
 register/deregister pmf(9) NULL handlers for bthub(4) and
 bluetooth devices which attach there, to fix PR/39006


 To generate a diff of this commit:
 cvs rdiff -u -r1.21 -r1.21.2.1 src/sys/dev/bluetooth/bthidev.c
 cvs rdiff -u -r1.17 -r1.17.8.1 src/sys/dev/bluetooth/bthub.c
 cvs rdiff -u -r1.13 -r1.13.2.1 src/sys/dev/bluetooth/btkbd.c
 cvs rdiff -u -r1.1 -r1.1.22.1 src/sys/dev/bluetooth/btmagic.c
 cvs rdiff -u -r1.9 -r1.9.18.1 src/sys/dev/bluetooth/btms.c
 cvs rdiff -u -r1.26 -r1.26.2.1 src/sys/dev/bluetooth/btsco.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: plunky@NetBSD.org
State-Changed-When: Tue, 03 Apr 2012 17:49:51 +0000
State-Changed-Why:
fixed and pulled up to netbsd-6


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.