register/deregister pmf(9) NULL handlers for bthub(4) and bluetooth devices which attach there, to fix PR/39006